<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pagamento_orientacao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:text="@string/orientacao_pagamento"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pagamento_valor_da_compra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/valor_da_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_orientacao" />

    <TextView
        android:id="@+id/pagamento_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="24sp"
        android:textColor="@android:color/holo_green_dark"
        app:layout_constraintStart_toStartOf="@+id/pagamento_valor_da_compra"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_da_compra"
        tools:text="R$ 421,50"/>

    <EditText
        android:id="@+id/pagamento_numero_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/numero_do_cartao"
        android:maxLength="12"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_preco_pacote" />

    <EditText
        android:id="@+id/pagamento_mes_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/mes_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_dia_cartao"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/ano_cartao"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toEndOf="@id/pagamento_mes_cartao" />

    <EditText
        android:id="@+id/pagamento_cvc_cartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/cvc_pagamento"
        android:textAlignment="center"
        android:gravity="center"
        android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_numero_cartao" />

    <EditText
        android:id="@+id/pagamento_nome_no_cartao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/nome_no_cartao"
        android:digits="@string/mascara_nome_no_cartao"
        app:layout_constraintEnd_toEndOf="@+id/pagamento_cvc_cartao"
        app:layout_constraintStart_toStartOf="@+id/pagamento_mes_cartao"
        app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao" />

    <Button
        android:id="@+id/pagamento_finalizar_compra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finalizar_compra"
        android:background="@drawable/botao_redondo"
        android:textColor="@android:color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/pagamento_nome_no_cartao"
        app:layout_constraintEnd_toEndOf="@id/pagamento_nome_no_cartao"
        app:layout_constraintTop_toBottomOf="@id/pagamento_nome_no_cartao"/>


</android.support.constraint.ConstraintLayout>