<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/resumo_compra_banner_inicial"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/holo_orange_dark"
        android:contentDescription="@string/conteudo_do_banner_inicial"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/resumo_compra_parabens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parabens"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintTop_toTopOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintVertical_bias="0.0"/>

    <TextView
        android:id="@+id/resumo_compra_realizada_sucesso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@android:color/white"
        android:text="@string/compra_realizada"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_parabens"
        app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"/>

    <TextView
        android:id="@+id/resumo_compra_confira_resumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confira_o_resumo"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner_inicial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/resumo_compra_imagem_pacote"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/imagem_do_pacote"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resumo_compra_confira_resumo"
        tools:src="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/resumo_compra_local_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        tools:text="São Paulo"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_imagem_pacote"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/resumo_compra_data_viagem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="02/08 - 10/08 de 2008"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_local_pacote"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_local_pacote"/>

    <TextView
        android:id="@+id/resumo_compra_preco_pacote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="R$ 243,99"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/resumo_compra_data_viagem"
        app:layout_constraintStart_toStartOf="@+id/resumo_compra_data_viagem"/>

</android.support.constraint.ConstraintLayout>